# agri-advisor-backend

./: agri_advisor.db  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 9f752c7604d8_initial_database_schema.py
app/: main.py
app/api/: auth.py  chatbot.py  farms.py  recommendations.py
app/core/: config.py  security.py
app/db/: database.py  models.py  schemas.py
app/services/: data_ingestion.py  market_data_job.py  ml_service.py
models/: cost_of_cultivation.pkl  crop_recommender.pkl  sustainability_scores.csv  yield_forecaster.pkl  yield_forecaster_columns.pkl  yield_forecaster_scaler.pkl
